[workspace]
resolver = "2" # Important! wgpu/Bevy needs this

members = [
    "hello_workspace",
    "hello_bevy"
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our
# code:
[profile.dev.package."*"]
opt-level = 3
